# fastrtt

./: .pre-commit-config.yaml  README.md  fastrtt.code-workspace  pyproject.toml  report.md  ruff.toml  sample.env
examples/: letter01.md
knowledge/: rtt-guidance-feb-25_sections.json
resources/: architecture-claude.md  architecture-grok.md  interpreted-rtt-guidance-feb-25.md  rtt-guidance-feb-25.md
src/fastrtt/: __init__.py  crew.py  main.py  otel.py
src/fastrtt/config/: agents.yaml  tasks.yaml
src/fastrtt/mcp/: server.py
src/fastrtt/utils/: markdown_to_dict.py
