[project]
name = "fastrtt"
version = "0.1.0"
description = "fastrtt using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.71.0",
    "crewai[tools]>=0.186.1,<1.0.0",
    "langfuse>=3.3.5",
    "openinference-instrumentation-crewai>=0.1.13",
    "openinference-instrumentation-litellm>=0.1.25",
    "openlit>=1.35.1",
]

[project.scripts]
fastrtt = "fastrtt.main:run"
run_crew = "fastrtt.main:run"
train = "fastrtt.main:train"
replay = "fastrtt.main:replay"
test = "fastrtt.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.7",
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]
